     parent (it does not free it).
     (suggested by Alex Katebi)

   - Added scew_element_parent which returns an element's parent if
     any.
     (thanks to dsk AT purdue DOT edu and Alex Katebi)

   - Added scew_element_add_pair which allows to add a new attribute
     with a name and contents.
     (thanks to Christopher Layne)

** Changes:

   - XML declaration standalone attribute is now used.

   - Test cases have been added using Check unit testing framework
     (C99 needed).
     (see http://check.sf.net)

   - Code has been cleaned to allow better definition of private and
     public interfaces.

   - Documentation has been improved and organized into modules.

   - SCEW now uses libtool to generate a static or dynamic library.

   - Thread support can now be disabled (see ./configure --help).

** Fixes:

   - Fix compilation warnings in error.c and parser.c.
     (reported by Aaron S. Kurland)

   - Fix scew_tree_free documentation.
     (reported by Gord Shier)

   - Hardcoded gcc "CFLAGS" removed.
     (reported by Mark Zieg)

------------------------------------------------------------------------

* Version 0.4.0 (2004/05/25)

** Changes:

   - Ability to load and XML document from an stream has been
     added. The stream may not be completed, so it will just load
     correct XML pieces. A callback, set by the user, will be called
     each time an element is available.
     (thanks to Gord Shier)

** Fixes:

   - Fixed indentation level when document contains multiple
     consecutive empty elements.
     (thanks to Tom Probasco)

   - scew_element_add_attr_pair() did not add a new attribute
     correctly if the attribute already existed.
     (reported by Matthew Peltzer)

   - Compiltaion fixes in MSVC.  Compiler interpreted a function
     argument called list as the std::list.
     (reported by Renaud Dumont)

------------------------------------------------------------------------

* Version 0.3.2 (2004/01/30)

** Changes:
