@@ -41,6 +41,5 @@ tests/check_writer_file
 win32/build
 win32/lib
 win32/scew.ncb
-win32/scew.sln
 win32/scew.suo
 win32/scew.vcproj.*
